Del2/.stack-work/logs/wai-cors-0.2.6.log
Configuring wai-cors-0.2.6...
clang: warning: argument unused during compilation: '-nopie' [-Wunused-command-line-argument]
Preprocessing library for wai-cors-0.2.6..
Building library for wai-cors-0.2.6..

[;1msrc/Network/Wai/Middleware/Cors.hs:515:5: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: treating Unicode character <U+2227> as identifier character rather than as '^' symbol [-Wunicode-homoglyph]
        ∧ map fst headers `isSubsetOf` simpleHeaders
        ^[0m[0m
[;1m[34m    |[0m[0m
[;1m[34m515 |[0m[0m     [;1m[31m∧[0m[0m map fst headers `isSubsetOf` simpleHeaders
[;1m[34m    |[0m[0m[;1m[31m     ^[0m[0m
[0m[0m[0m
[;1msrc/Network/Wai/Middleware/Cors.hs:516:5: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: treating Unicode character <U+2227> as identifier character rather than as '^' symbol [-Wunicode-homoglyph]
        ∧ case (method, lookup "content-type" headers) of
        ^[0m[0m
[;1m[34m    |[0m[0m
[;1m[34m516 |[0m[0m     [;1m[31m∧[0m[0m case (method, lookup "content-type" headers) of
[;1m[34m    |[0m[0m[;1m[31m     ^[0m[0m
[0m[0m[0m2 warnings generated.
[1 of 1] Compiling Network.Wai.Middleware.Cors ( src/Network/Wai/Middleware/Cors.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Network/Wai/Middleware/Cors.o )
ignoring (possibly broken) abi-depends field for packages
Installing library in /Users/pokki/.stack/snapshots/x86_64-osx/lts-12.14/8.4.3/lib/x86_64-osx-ghc-8.4.3/wai-cors-0.2.6-EQ0NddRyQBh25ZHaluAQPM
Registering library for wai-cors-0.2.6..
